--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -45,6 +45,15 @@
                     </td>
                 </tr>
                 <!--#end if#-->
+                <!--#if not $have_mt_par2#-->
+                <tr>
+                    <th scope="row">Multicore Par2</th>
+                    <td>
+                        <span class="label label-warning">$T('notAvailable')</span> $T('explain-getpar2mt')
+                        <a href="${helpuri}installation/multicore-par2" target="_blank">${helpuri}installation/multicore-par2</a>
+                    </td>
+                </tr>
+                <!--#end if#-->
                 <!--#if not $have_cryptography #-->
                 <tr>
                     <th scope="row">Python Cryptography:</th>
