--- a/interfaces/Config/templates/config_cat.tmpl
+++ b/interfaces/Config/templates/config_cat.tmpl
@@ -17,7 +17,7 @@
                             <th>$T('category')</th>
                             <th>$T('priority')</th>
                             <th>$T('mode')</th>
-                            <!--#if $script_list#-->
+                            <!--#if $scripts#-->
                             <th>$T('script')</th>
                             <!--#end if#-->
                             <th>$T('catFolderPath')</th>
@@ -61,10 +61,10 @@
                                     <option value="3" <!--#if $slot.pp=="3" then 'selected="selected"' else ""#-->>$T('pp-delete')</option>
                                 </select>
                             </td>
-                            <!--#if $script_list#-->
+                            <!--#if $scripts#-->
                             <td>
                                 <select name="script">
-                                    <!--#for $sc in $script_list#-->
+                                    <!--#for $sc in $scripts#-->
                                         <!--#if not ($sc == 'Default' and $slot.name == '*')#-->
                                         <option value="$sc" <!--#if $slot.script.lower()==$sc.lower() then 'selected="selected"' else ""#-->>$Tspec($sc)</option>
                                         <!--#end if#-->
