--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -163,7 +163,7 @@
                             <!--#if $rss[$feed]['pick_cat']#-->
                             <td>
                                 <select name="cat">
-                                    <!--#for $ct in $cat_list#-->
+                                    <!--#for $ct in $categories#-->
                                         <option value="$ct" <!--#if $ct==$rss[$feed]['cat'] then 'selected="selected"' else ""#-->>$Tspec($ct)</option>
                                     <!--#end for#-->
                                 </select>
@@ -191,7 +191,7 @@
                             <!--#if $rss[$feed]['pick_script']#-->
                             <td>
                                 <select name="script">
-                                    <!--#for $sc in $script_list#-->
+                                    <!--#for $sc in $scripts#-->
                                         <option value="$sc" <!--#if $sc==$rss[$feed]['script'] then 'selected="selected"' else ""#-->>$Tspec($sc)</option>
                                     <!--#end for#-->
                                 </select>
@@ -236,7 +236,7 @@
                             <!--#if $rss[$feed]['pick_cat']#-->
                             <td>
                                 <select name="cat">
-                                    <!--#for $ct in $cat_list#-->
+                                    <!--#for $ct in $categories#-->
                                         <option value="$ct" <!--#if $ct=='Default' then 'selected="selected"' else ""#-->>$Tspec($ct)</option>
                                     <!--#end for#-->
                                 </select>
@@ -264,7 +264,7 @@
                             <!--#if $rss[$feed]['pick_script']#-->
                             <td>
                                 <select name="script">
-                                    <!--#for $sc in $script_list#-->
+                                    <!--#for $sc in $scripts#-->
                                         <option value="$sc" <!--#if $sc=='Default' then 'selected="selected"' else ""#-->>$Tspec($sc)</option>
                                     <!--#end for#-->
                                 </select>
@@ -312,7 +312,7 @@
                                 <!--#if $rss[$feed]['pick_cat']#-->
                                 <td>
                                     <select name="cat">
-                                        <!--#for $ct in $cat_list#-->
+                                        <!--#for $ct in $categories#-->
                                             <option value="$ct" <!--#if $ct==$filter[0] then 'selected="selected"' else ""#-->>$Tspec($ct)</option>
                                         <!--#end for#-->
                                     </select>
@@ -340,7 +340,7 @@
                                 <!--#if $rss[$feed]['pick_script']#-->
                                 <td>
                                     <select name="script">
-                                        <!--#for $sc in $script_list#-->
+                                        <!--#for $sc in $scripts#-->
                                             <option value="$sc" <!--#if $sc==$filter[2] then 'selected="selected"' else ""#-->>$Tspec($sc)</option>
                                         <!--#end for#-->
                                     </select>
