--- a/interfaces/Plush/templates/_inc_modals.tmpl
+++ b/interfaces/Plush/templates/_inc_modals.tmpl
@@ -84,10 +84,10 @@ $T('Plush-containerWidth'):
     <div id="add_nzb_hr"><hr></div>
       <i>$T('pp'):</i>
       <table id="add_nzb_pp">
-        #if $cat_list#
+        #if $categories#
         <tr><td style="text-align:right">$T('category'):</td>
           <td><select id="addID_cat" name="cat">
-            #for $ct in $cat_list#
+            #for $ct in $categories#
             <option value="$ct">$Tspec($ct)</option>
             #end for#
             </select>
@@ -111,10 +111,10 @@ $T('Plush-containerWidth'):
             <option value="3">$T('pp-delete')</option>
             </select>
         </td></tr>
-        #if $script_list#
+        #if $scripts#
         <tr><td style="text-align:right">$T('script'):</td>
           <td><select id="addID_script" name="script">
-            #for $sc in $script_list#
+            #for $sc in $scripts#
             <option value="$sc">$Tspec($sc)</option>
             #end for#
             </select>
@@ -186,7 +186,7 @@ $T('Plush-containerWidth'):
         <option value='www.newshosting.com'>NewsHosting</option>
         <option value='www.readnews.com'>Readnews</option>
         <option value='www.supernews.com'>SuperNews</option>
-        <option value='www.thundernews.com'>ThunderNews</option>        
+        <option value='www.thundernews.com'>ThunderNews</option>
         <option value='www.tweaknews.eu'>Tweaknews</option>
         <option value='www.usenetserver.com'>UsenetServer</option>
         <option value='www.xentech.net'>XenTech</option>
