--- a/interfaces/Plush/templates/main.tmpl
+++ b/interfaces/Plush/templates/main.tmpl
@@ -46,9 +46,9 @@
                       <option value="hibernate_pc" <!--#if $finishaction == 'hibernate_pc' then 'selected' else ''#-->>$T('hibernatePc')</option>
                       <!--#end if#-->
                     </optgroup>
-                    <!--#if $script_list#-->
+                    <!--#if $scripts#-->
                     <optgroup label="$T('eoq-scripts')">
-                      <!--#for $sc in $script_list#-->
+                      <!--#for $sc in $scripts#-->
                       <!--#if $sc != 'None'#-->
                       <option value="script_$sc" <!--#if $finishaction == 'script_'+$sc then 'selected' else ''#-->>$sc</option>
                       <!--#end if#-->
@@ -136,10 +136,10 @@
       <option value="pause">$T('sch-pause')</option>
       <option value="resume">$T('sch-resume')</option>
     </optgroup></select>
-<!--#if $cat_list#-->
+<!--#if $categories#-->
   <select id="multi_cat"><optgroup label="$T('category')">
     <option value="">$T('category')</option>
-  <!--#for $ct in $cat_list#-->
+  <!--#for $ct in $categories#-->
     <option value="$ct">$Tspec($ct)</option>
   <!--#end for#-->
   </optgroup></select>
@@ -158,10 +158,10 @@
     <option value="2">$T('pp-unpack')</option>
     <option value="3">$T('pp-delete')</option>
   </optgroup></select>
-<!--#if $script_list#-->
+<!--#if $scripts#-->
   <select id="multi_script"><optgroup label="$T('script')">
     <option value="">$T('script')</option>
-  <!--#for $sc in $script_list#-->
+  <!--#for $sc in $scripts#-->
     <!--#if $sc != "Default"#--><option value="$sc">$Tspec($sc)</option><!--#end if#-->
   <!--#end for#-->
   </optgroup></select>
