--- a/interfaces/Plush/templates/queue.tmpl
+++ b/interfaces/Plush/templates/queue.tmpl
@@ -75,7 +75,7 @@
       <td></td>
     <!--#end if#-->
   <!--#end if#-->
-  
+
   <td>
     <div class="main_sprite_container sprite_progressbar_bg">
       <div class="main_sprite_container sprite_progress_done" style="background-position: -<!--#if $slot.mb == "0.00" then "120" else int(120 - 120.0 / 100.0 * int(100 - float($slot.mbleft) / float($slot.mb) * 100))#-->px -401px">
@@ -94,9 +94,9 @@
   </td>
 
   <td class="options nowrap">
-    <!--#if $cat_list#-->
+    <!--#if $categories#-->
     <select class="change_cat"><optgroup label="$T('category')">
-      <!--#for $ct in $cat_list#-->
+      <!--#for $ct in $categories#-->
       <option value="$ct" <!--#if $slot.cat.lower() == $ct.lower() then "selected" else ""#-->>$Tspec($ct)</option>
       <!--#end for#-->
     </optgroup></select>
@@ -114,9 +114,9 @@
       <option value="2" <!--#if $slot.unpackopts == "2" then "selected " else ""#-->>$T('pp-unpack')</option>
       <option value="3" <!--#if $slot.unpackopts == "3" then "selected " else ""#-->>$T('pp-delete')</option>
     </optgroup></select>
-    <!--#if $script_list#-->
+    <!--#if $scripts#-->
     <select class="change_script"><optgroup label="$T('script')">
-      <!--#for $sc in $script_list#-->
+      <!--#for $sc in $scripts#-->
       <option value="$sc"  <!--#if $slot.script == $sc then "selected" else ""#-->>$Tspec($sc)</option>
       <!--#end for#-->
     </optgroup></select>
