Upgrade moment 2.10.6 -> 2.18.1 (inc locales). Corrected filename to reflect its minified. > https://github.com/moment/moment/blob/develop/CHANGELOG.md

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -125,7 +125,7 @@
             <!--#include raw $webdir + "/static/javascripts/jquery.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery-ui.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery.peity.min.js"#-->
-            <!--#include raw $webdir + "/static/javascripts/moment.js"#-->
+            <!--#include raw $webdir + "/static/javascripts/moment.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/knockout-latest.js"#-->
             <!--#include raw $webdir + "/static/javascripts/knockout-extensions.js"#-->
             <!--#include raw $webdir + "/static/bootstrap/js/bootstrap.min.js"#-->
