Optional tag on dark theme not visible
Closes #905

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -184,7 +184,7 @@
                                     <div class="col-sm-6">$T('swtag-server')</div>
                                     <div class="col-sm-6">
                                         <span data-bind="text: servername"></span>
-                                        <span class="label label-default" data-bind="visible: serveroptional">$T('optional').capitalize()</span>
+                                        <span class="label label-warning" data-bind="visible: serveroptional">$T('optional').capitalize()</span>
                                     </div>
                                 </div>
                                 <div class="row">
