--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -58,7 +58,7 @@
             glitterTranslate.pauseFor = "$T('pauseFor')"
             glitterTranslate.minutes = "$T('mins')"
             glitterTranslate.shutdown = "$T('shutdownOK?')";
-            glitterTranslate.restart = "$T('explain-Restart')".replace(/<br \/>/g, "\n");
+            glitterTranslate.restart = "$T('explain-Restart') $T('explain-needNewLogin')".replace(/\<br(\s*\/|)\>/g, '\n');
             glitterTranslate.repair = "$T('explain-Repair')".replace(/<br \/>/g, "\n").replace(/&quot;/g,'"');
             glitterTranslate.removeDown = "$T('Glitter-confirmClearDownloads')";
             glitterTranslate.removeDow1 = "$T('Glitter-confirmClear1Download')";
