All links to sabnzbd.org should be HTTPS

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -109,7 +109,7 @@
             <tbody>
                 <tr>
                     <th scope="row">$T('homePage') </th>
-                    <td><a href="http://sabnzbd.org/" target="_blank">http://sabnzbd.org/</a></td>
+                    <td><a href="https://sabnzbd.org/" target="_blank">https://sabnzbd.org/</a></td>
                 </tr>
                 <tr>
                     <th scope="row">$T('menu-wiki') </th>
@@ -117,7 +117,7 @@
                 </tr>
                 <tr>
                     <th scope="row">$T('menu-forums') </th>
-                    <td><a href="http://forums.sabnzbd.org/" target="_blank">http://forums.sabnzbd.org/</a></td>
+                    <td><a href="https://forums.sabnzbd.org/" target="_blank">https://forums.sabnzbd.org/</a></td>
                 </tr>
                 <tr>
                     <th scope="row">$T('source') </th>
