--- a/interfaces/Plush/templates/_inc_modals.tmpl
+++ b/interfaces/Plush/templates/_inc_modals.tmpl
@@ -23,8 +23,8 @@
   <div id="help_modal">
     <table>
       <tr><td><strong>$T('menu-wiki'):</strong></td><td><a href="$helpuri$help_uri" target="_blank">$helpuri$help_uri</a></td></tr>
-      <tr><td><strong>$T('menu-forums'):</strong></td><td><a href="http://forums.sabnzbd.org/" target="_blank">http://forums.sabnzbd.org/</a></td></tr>
-      <tr><td><strong>$T('menu-irc'):</strong></td><td><a href="http://www.sabnzbd.org/live-chat/" target="_blank">http://www.sabnzbd.org/live-chat/</a></td></tr>
+      <tr><td><strong>$T('menu-forums'):</strong></td><td><a href="https://forums.sabnzbd.org/" target="_blank">https://forums.sabnzbd.org/</a></td></tr>
+      <tr><td><strong>$T('menu-irc'):</strong></td><td><a href="https://sabnzbd.org/live-chat.html" target="_blank">https://sabnzbd.org/live-chat.html</a></td></tr>
     </table>
     <div class="sabnzbd_logo main_sprite_container sprite_sabnzbdplus_logo"></div>
     <p><strong>SABnzbd $T('version'):</strong> $version</p>
