--- a/interfaces/smpl/templates/main.tmpl
+++ b/interfaces/smpl/templates/main.tmpl
@@ -1134,7 +1134,7 @@ function loadingJSON(){
   <li><a style="text-decoration:underline;cursor:pointer;" onclick="if(confirm('$T('shutdownOK?')')){shutdown()}">$T('link-shutdown')</a></li>
   <br/>
   <li><a href="$helpuri" target="_blank">$T('menu-wiki')</a></li>
-  <li><a href="http://forums.sabnzbd.org" target="_blank">$T('menu-forums')</a></li>
+  <li><a href="https://forums.sabnzbd.org" target="_blank">$T('menu-forums')</a></li>
   <li><a href="http://sabnzbd.org/live-chat/" target="_blank">$T('menu-irc')</a></li>
 </ul>
 <!--<input type="checkbox" name="enable_speedlimit" />-->
