Add Donate links to main Config page and Glitter help modal

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -131,6 +131,10 @@
                     <th scope="row">$T('menu-issues') </th>
                     <td><a href="https://sabnzbd.org/wiki/introduction/known-issues" target="_blank">https://sabnzbd.org/wiki/introduction/known-issues</a></td>
                 </tr>
+                <tr>
+                    <th scope="row">$T('menu-donate') </th>
+                    <td><a href="https://sabnzbd.org/donate" target="_blank">https://sabnzbd.org/donate</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
