--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -629,7 +629,11 @@
                         </tr>
                         <tr>
                             <td><strong>$T('menu-irc'):</strong></td>
-                            <td><a href="https://sabnzbd.org/live-chat.html" target="_blank">https://sabnzbd.org/live-chat.html</a></td>
+                            <td><a href="https://sabnzbd.org/live-chat" target="_blank">https://sabnzbd.org/live-chat</a></td>
+                        </tr>
+                        <tr>
+                            <td><strong>$T('menu-donate')</strong></td>
+                            <td><a href="https://sabnzbd.org/donate" target="_blank">https://sabnzbd.org/donate</a></td>
                         </tr>
                     </tbody>
                 </table>
