--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -528,7 +528,9 @@
                                                 <span>
                                                     <span data-bind="truncatedTextCenter: filename"></span>
                                                     <small>(<span data-bind="text: file_age"></span> - <span data-bind="text: mb"></span> MB)</small>
-                                                </span>
+													<a href="#" class="buttonMoveToTop" title="Move To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
+													<a href="#" class="buttonMoveToBottom" title="Move To Bottom"><span class="glyphicon glyphicon-chevron-down"></span></a>
+												</span>
                                             </div>
                                         </div>
                                     </td>
