--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -100,6 +100,7 @@ legend,
 
 .table-striped>tbody>tr:nth-child(odd)>td,
 .table>tbody>tr:nth-child(odd)>td,
+.table>tbody>tr:nth-child(even).files-sortable>td .progress,
 .multioperations-selector,
 .pagination li.active span,
 .pagination li span:hover,
@@ -109,8 +110,17 @@ legend,
     color: #EBEBEB;
 }
 
+.table>tbody>tr:nth-child(even).files-sortable>td .progress .progress-bar .fileDetails {
+    color: #000000;
+}
+
+.table>tbody>tr:nth-child(odd).files-sortable>td .progress .progress-bar .fileDetails {
+    color: #000000;	
+}
+
 .table-striped>tbody>tr:nth-child(even)>td,
 .table>tbody>tr:nth-child(even)>td,
+.table>tbody>tr:nth-child(odd).files-sortable>td .progress,
 .table th,
 .pagination li span,
 .pagination>.disabled>span,
